# Django_AirBnB

./: README.md  credentials.json  db.sqlite3  pyproject.toml  render.yaml
bookings/: admin.py  models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_rename_check_out_data_booking_check_out_date.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py  permissions.py
config/: authentication.py  schema.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_initial.py
google_cloud_storage/: gcs.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py  types.py
reviews/migrations/: 0001_initial.py  0002_rename_rate_review_rating.py
rooms/: admin.py  models.py  queries.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0002_room_name.py  0003_alter_amenity_options_alter_amenity_description.py  0003_alter_room_amenity_alter_room_category_and_more.py  0004_alter_room_amenity_alter_room_category_and_more.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py  serializers.py  types.py  urls.py  views.py
wishlists/: models.py  serializers.py  urls.py  views.py
(+8 files in other folders)
