[tool.poetry]
name = "django-airbnb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
black = "^23.7.0"
djangorestframework = "^3.14.0"
pyjwt = "^2.8.0"
django-environ = "^0.11.2"
django-cors-headers = "^4.2.0"
requests = "^2.31.0"
django-storages = "^1.14"
django-google-storage = "^0.3"
google-cloud-storage = "^2.11.0"
wget = "^3.2"
strawberry-graphql = {extras = ["debug-server"], version = "^0.209.5"}
strawberry-graphql-django = "^0.20.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"
Django = "~4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
